--- a/build.gradle
+++ b/build.gradle
@@ -8,14 +8,24 @@ group = 'com.training'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '8'
 
+dependencyManagement {
+	imports {
+		mavenBom 'org.apache.logging.log4j:log4j-bom:2.14.1'
+	}
+}
+
 repositories {
 	mavenCentral()
 }
+
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	runtimeOnly 'org.postgresql:postgresql'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+	compile 'org.apache.logging.log4j:log4j-api'
+	compile 'org.apache.logging.log4j:log4j-core'
 }
 
 test {
