--- a/build.gradle
+++ b/build.gradle
@@ -1,34 +1,23 @@
 plugins {
-	id 'org.springframework.boot' version '2.4.4'
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
-	id 'java'
 }
 
-group = 'com.training'
-version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '8'
+subprojects {
+	apply plugin: 'java'
+	apply plugin: 'io.spring.dependency-management'
+	apply plugin: 'java-library'
 
-dependencyManagement {
-	imports {
-		mavenBom 'org.apache.logging.log4j:log4j-bom:2.14.1'
+	group = 'com.training'
+	version = '0.0.1-SNAPSHOT'
+	sourceCompatibility = '8'
+
+	repositories {
+		mavenCentral()
 	}
-}
 
-repositories {
-	mavenCentral()
-}
-
-
-dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	runtimeOnly 'org.postgresql:postgresql'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testRuntimeOnly 'com.h2database:h2'
-
-	compile 'org.apache.logging.log4j:log4j-api'
-	compile 'org.apache.logging.log4j:log4j-core'
-}
-
-test {
-	useJUnitPlatform()
+	dependencyManagement {
+		imports {
+			mavenBom 'org.springframework.boot:spring-boot-dependencies:2.4.4'
+		}
+	}
 }
