--- a/common/build.gradle
+++ b/common/build.gradle
@@ -1,5 +1,6 @@
+
 plugins {
-	id 'org.springframework.boot' version '2.4.4'
+    id 'org.springframework.boot' version '2.4.4'
 }
 
 dependencies {
@@ -8,8 +9,8 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'com.h2database:h2'
 
-    compile 'org.apache.logging.log4j:log4j-api'
-    compile 'org.apache.logging.log4j:log4j-core'
+    implementation 'org.apache.logging.log4j:log4j-api'
+    implementation 'org.apache.logging.log4j:log4j-core'
 }
 
 test {
